# duckdb_pipeline

./: .gitignore  CMakeLists.txt  README.md  main.cpp  run.sh
.github/workflows/: build.yml  build_duckdb_golang.yml  build_duckdb_value.yml  build_eigen.yml
eigen_nbody/: CMakeLists.txt  nbody.cpp  run.sh
projects/a/: run.sh
projects/aws_ec2_manager/: aws-ec2-manager-ssh.config  aws_ec2_manager.py  ssh-ec2
projects/cli_py/: a.py  cli_py.py  create_snapshot.sh  e1.py  trun.sh
projects/cpp_call_rust_call_cpp/: CMakeLists.txt  Cargo.toml  main.cpp  run.sh  rust_ffi.h
projects/cpp_call_rust_call_cpp/src/: lib.rs
projects/cpp_metadata/: CMakeLists.txt  MetaData.cpp  MetaData.h  main.cpp  run.sh
projects/cpp_metadata/tests/: CMakeLists.txt  test_MetaData.cpp
projects/cpp_pipeline_pattern/: main.cpp
projects/crc32c_rust/: .gitignore  Cargo.toml  pyproject.toml
projects/crc32c_rust/python/crc32c_rust/: __init__.py
projects/crc32c_rust/python/crc32c_rust/tests/: test_crc32c.py
projects/crc32c_rust/src/: lib.rs
projects/duckdb_c_api/: CMakeLists.txt  main.cpp  run.sh
projects/duckdb_ipc/: CMakeLists.txt  a.py  b.py  build.sh  c.py  d.py  decode_url.py  e.py  e1.py
projects/duckdb_ipc/cmake-ipc/: CMakeLists.txt  a.py  b.py  c.py  data.arrow  schema-valid-new.arrows
projects/duckdb_ipc/cmake-ipc/src/: app.cpp  library.c  library.h
projects/duckdb_ipc/cxx/: main.cpp
projects/duckdb_ipc/ret_arrow/: Cargo.toml
projects/duckdb_ipc/ret_arrow/examples/: struct_to_bytes.rs
projects/duckdb_ipc/ret_arrow/src/: lib.rs
projects/duckdb_null_value/: .clang-format  .clangd  .gitignore  CMakeLists.txt  Dockerfile  a.py  main.cpp  run.sh  run_in_docker.sh  setup_clang19.sh  test.cpp
projects/eigen_and_duckdb/: main.cpp  run.sh
projects/eigen_nbody/: CMakeLists.txt  nbody.cpp  run.sh
projects/gcp_fsspec/: .gitignore  a.sh  b.py  c.py  main.py
projects/go_read_duckdb/: .gitignore  README.md  create_data.py  docker_run.sh  go.Dockerfile  go.golang.Dockerfile  go.mod  go.ubi8.Dockerfile  go.ubi9.Dockerfile  go_setup_and_run.sh  python.Dockerfile  read_data.go
projects/json_dumper/: a.py  calender.py
projects/lib_packer/: .gitignore  CMakeLists.txt  README.md
projects/lib_packer/find_files/: Cargo.toml
projects/lib_packer/find_files/src/: main.rs
projects/lib_packer/scripts/: run.sh  strace_all.sh
projects/lib_packer/src/: main.c
projects/pcap-gcs-reader/: go.mod  go.sum
projects/pcap-gcs-reader/cmd/: main.go
projects/pcap-gcs-reader/pkg/pcapreader/: config.go  processor.go
projects/py_check_entry/: .gitignore  config.toml  main.py
projects/python_async_mp/: a.py
projects/python_cmd_args/: a.py
projects/templated_virtual_function/: CMakeLists.txt  main.cpp  run.sh
projects/uv_replace_pip/: Dockerfile  requirements.txt  run.sh
projects/zlib-ng/: .gitignore  CMakeLists.txt  load_patch_and_run.sh  run.sh  save_patch.sh
projects/zlib-ng/include/: compression.hpp
projects/zlib-ng/src/: compression.cpp
projects/zlib-ng/tests/: compression_tests.cpp
