[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "crc32c_rust"
version = "0.1.0"
description = "Fast CRC32C calculation using Rust"
authors = [{ name = "Your Name", email = "your.email@example.com" }]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
