[package]
name = "ret_arrow"
version = "0.1.0"
edition = "2021"

[dependencies]
arrow = "53.3.0"
arrow-array = { version = "53.3.0", features = ["ffi"] }
arrow-data = "53.3.0"
arrow-schema = "53.3.0"
serde = { version = "1.0.215", features = ["derive"] }

[lib]
name = "ret_arrow"
crate-type = ["cdylib", "rlib"]
